// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SbloccaCodiceView /> visualizza un container con uno spinner al suo interno e paypal.display == false 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": undefined,
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Premium"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <Div
      padding="0 0 20px;"
    >
      <Spinner
        key="spinner"
        number={3}
      />
    </Div>
    <ButtonGroup
      buttons={
        Array [
          Object {
            "id": 1,
            "label": "Assistenza",
            "onClickFunction": [Function],
          },
        ]
      }
    />
  </Container>
</Page>
`;

exports[`<SbloccaCodiceView /> visualizza un container con uno spinner e paypal.display == true mostra messaggio 1`] = `
<Page>
  <TopBar
    backArrow={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    backNav={
      Object {
        "enabled": true,
        "url": undefined,
      }
    }
    closeBtn={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    lesson={
      Object {
        "enabled": false,
        "url": "",
      }
    }
    pinned={true}
    single={true}
    title="Premium"
    topSwitcher={
      Object {
        "items": Array [],
      }
    }
  />
  <Container>
    <Div
      padding="0 0 20px;"
    >
      <Spinner
        key="spinner"
        number={3}
      />
      <AlertBanner
        actioncolor="action"
        direction="column"
        icona="hourglass"
        key="alertBanner"
        margin="20px auto"
        maxWidth="380px"
        padding="30px 0 0"
        theme={
          Object {
            "brand": "#00BBEF",
            "radius": Object {
              "general": "6px",
            },
          }
        }
      >
        <Button__Icon
          height="18px"
          path={
            <path
              d="M15.448 0H3.511c-.57 0-1.085.316-1.345.824-.26.507-.212 1.11.122 1.572L7.07 9l-4.782 6.604a1.504 1.504 0 0 0-.122 1.572c.26.508.775.824 1.345.824h11.937c.57 0 1.086-.316 1.345-.824.26-.507.213-1.11-.122-1.572L11.89 9l4.781-6.604a1.504 1.504 0 0 0 .122-1.572A1.504 1.504 0 0 0 15.448 0zm0 .692a.818.818 0 0 1 .663 1.298L11.035 9l5.076 7.01a.818.818 0 0 1-.663 1.298H3.511a.818.818 0 0 1-.662-1.298L7.925 9 2.849 1.99A.818.818 0 0 1 3.51.692h11.937zm-.773 14.864a.633.633 0 0 0-.1-.205l-3.297-2.406c-.886-.704-2.71-.704-3.596 0L4.384 15.35a.633.633 0 0 0-.119.416.631.631 0 0 0 .628.582h9.174a.64.64 0 0 0 .223-.04.626.626 0 0 0 .405-.542.613.613 0 0 0-.02-.211zM6.493 5.604L8.446 8.3c.51.704 1.558.704 2.068 0l1.953-2.697H6.493z"
              fillRule="nonzero"
            />
          }
          theme={
            Object {
              "brand": "#00BBEF",
            }
          }
          viewBox="0 0 18 18"
          width="18px"
        />
        <p>
          Stiamo processando il pagamento:
          <br />
          non chiudere il browser e attendi
          <br />
          di essere reindirizzato. Grazie
        </p>
      </AlertBanner>
    </Div>
    <ButtonGroup
      buttons={
        Array [
          Object {
            "id": 1,
            "label": "Assistenza",
            "onClickFunction": [Function],
          },
        ]
      }
    />
  </Container>
</Page>
`;
